--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,8 +73,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://intellipro.applytojob.com/apply/2i5aih0fmz/Financial-Business-System-Analyst'>Financial Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/teamreddog/job/4sjthr1ejcossmftihuxstib1e'>Business Intelligence Analyst | Current Opportunities</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://intellipro.applytojob.com/apply/2i5aih0fmz/Financial-Business-System-Analyst'>Financial Business System Analyst - IntelliPro Group Inc. - Career Page</a></h5> 
+<p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/AccoladeInc/743999698433019-business-intelligence-developer-i-junior-level-'>Accolade, Inc. Business Intelligence Developer I (Junior level) | SmartRecruiters</a></h5> 
@@ -89,7 +93,7 @@
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698403179-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698403179-business-intelligence-internship'>Bosch Group Business Intelligence - Internship | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -101,11 +105,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698316874-business-intelligence-analyst'>Correct Craft Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CorrectCraft/743999698316874-business-intelligence-analyst'>Correct Craft Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
+<h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -113,7 +117,7 @@
 <p><span class="badge badge-light">United States  North America</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/snowflakecomputing/jobs/4494831002'>Job Application for Director of Sales Business Intelligence  at Snowflake</a></h5> 
 <p><span class="badge badge-light">San Mateo, California United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -165,7 +169,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/canadian-solar/job/o4Qqbfwf'>Canadian Solar Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/canadian-solar/job/o4Qqbfwf'>Canadian Solar Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -218,7 +222,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tui.join.com/jobs/463583-business-intelligence-specialist-m-w-d'>Job @ TUI Austria Holding (Wien): Business Intelli... | JOIN</a></h5> 
 <p><span class="badge badge-light">Wien, ?sterreich</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -330,7 +334,7 @@ using?...</p>
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698009318-business-intelligence-consultant-j000605-'>outsourced Business Intelligence Consultant (J000605) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698009318-business-intelligence-consultant-j000605-'>outsourced Business Intelligence Consultant (J000605) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines  Philippines</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -354,7 +358,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
+<h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -371,7 +375,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oTRjbfwY&__jvst=Employee&__jvsd=smqK2hwk&__jvsc=Twitter&bid=nftBhMwR'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qfnaVfwr&k=Job&j=oTRjbfwY&__jvst=Employee&__jvsd=smqK2hwk&__jvsc=Twitter&bid=nftBhMwR'>Ingram Micro Careers - Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">United States Irvine, California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -407,7 +411,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -479,10 +483,6 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <h5><a href='https://rheindata.join.com/jobs/447662-business-intelligence-berater-m-w-d'>Job @ rheindata (Cologne): Business Intelligence-B... | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-20</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q4w9Vfwo&k=Job&j=ok9Kafw7&__jvst=Employee+Referral&__jvsd=sfvEdgwm&__jvsc=Twitter&bid=nPgOeMwo'>GroupM EMEA Careers - Business Intelligence Developer, Neo Media World</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on:: 2019-10-20</p>
 <hr/>
 
 
