--- a/android-engineer.html
+++ b/android-engineer.html
@@ -128,11 +128,11 @@
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/o4robfwO'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-du/job/o4robfwO'>Trek Bicycle Careers - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -148,7 +148,7 @@
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/android-engineer-m-w-d-at-gnosis-service-gmbh/'>Android Engineer (m/w/d) at Gnosis Service GmbH ? CoinJobs</a></h5> 
+<h5><a href='https://coinjobs.org/job/android-engineer-m-w-d-at-gnosis-service-gmbh/'>Android Engineer (m/w/d) at Gnosis Service GmbH ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
@@ -218,7 +218,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Mountain View , CA  Mountain View, CA</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/onefootball/jobs/1920667'>Job Application for Senior Android Engineer - AdTech at Onefootball</a></h5> 
 <p><span class="badge badge-light">Berlin  ?  Berlin</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -226,7 +226,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin, Germany  Australia Italy</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4460706002'>Job Application for  Android Engineering Team Lead - Store Pick at Ocado Group</a></h5> 
+<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4460706002'>Job Application for  Android Engineering Team Lead - Store Pick at Ocado Group</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -246,7 +246,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Hamburg Hamburg  Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/grow99/jobs/4481661002'>Job Application for Senior Android Engineer at Grow Mobility</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/grow99/jobs/4481661002'>Job Application for Senior Android Engineer at Grow Mobility</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
@@ -273,7 +273,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://androidandiosjobs.com/jobs/64/android-engineer-at-lenny'>Android Engineer at Lenny - Android &amp; iOS Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://androidandiosjobs.com/jobs/64/android-engineer-at-lenny'>Android Engineer at Lenny - Android &amp; iOS Jobs</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
